packages/test-cases/cases/apis/invalid-types/query/w3/index.ts
import {
  Input_boolMethod,
  Input_intMethod,
  Input_uIntMethod,
  Input_bytesMethod,
  Input_arrayMethod
} from "./Query";
export {
  Input_boolMethod,
  Input_intMethod,
  Input_uIntMethod,
  Input_bytesMethod,
  Input_arrayMethod
};
